fix(ui): not showing topics on desktop under header

--- a/src/components/Topics/Topics.module.css
+++ b/src/components/Topics/Topics.module.css
@@ -15,6 +15,7 @@
 }
 
 .desktop {
+    display: block;
     position: relative;
     left: 40px;
     border-left: 1px solid #EEE0C9;
@@ -27,6 +28,7 @@
 }
 
 .mobile {
+    display: none;
     margin-left: -37px;
 }
 
@@ -51,6 +53,16 @@
     .topics li{
         padding-left: 0px;
         font-size: 18px;
+    }
+}
+
+@media (max-width: 700px) {
+    .desktop {
+        display: none;
+    }
+
+    .mobile {
+        display: block;
     }
 }
 
